bookinfo/Gateway-VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway-workshop
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: cliente-certs
    hosts:
    - 'workshop-mesh-apps-N.apps.kali.rlab.sh' # Editar N
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-workshop
spec:
  hosts:
  - 'workshop-mesh-apps-N.apps.kali.rlab.sh' # Editar N
  gateways:
  - gateway-workshop
  http:
  - match:
    - uri:
        exact: /productpage
    - uri:
        prefix: /static
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: productpage
        port:
          number: 9080
